Adopt `String#formatted(...)`
Signed-off-by: Tim te Beek <tim@moderne.io>