@@ -203,7 +203,7 @@ public class CommandLine {
 		}
 
 		public Argument withQuotedValue(Object value) {
-			return new Argument(name, ArgumentValue.of(value, it -> String.format("\"%s\"", it.toString())));
+			return new Argument(name, ArgumentValue.of(value, it -> "\"%s\"".formatted(it.toString())));
 		}
 
 		public Argument withValue(Masked masked) {
@@ -226,7 +226,7 @@ public class CommandLine {
 		private String toNameValuePair(Optional<String> source) {
 
 			return source//
-					.map(it -> String.format("%s=%s", name, it))//
+					.map(it -> "%s=%s".formatted(name, it))//
 					.orElse(name);
 		}
 
