@@ -230,6 +230,6 @@ public class IssueTrackerCommands extends TimedCommand {
 	private IssueTracker getTrackerFor(ModuleIteration moduleIteration) {
 
 		return tracker.getRequiredPluginFor(moduleIteration.getSupportedProject(),
-				() -> String.format("No issue tracker found for module %s!", moduleIteration));
+				() -> "No issue tracker found for module %s!".formatted(moduleIteration));
 	}
 }
